--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,3 +1,11 @@
-<p>
-  footer works!
-</p>
+<ion-footer class="fixed-footer" collapse="fade">
+  <ion-toolbar>
+    <ul>
+      <li>
+        <ion-img class="imgIcon" src="../../../assets/Logo_Olympics_no_title.jpg"></ion-img>
+        <a href="https://olympics.com/es/paris-2024">Web Olimpiadas 2024</a>
+      </li>
+    </ul>
+    <ion-img class="img" src="../../../assets/2024_Summer_Olympics_text_logo.svg.png"></ion-img>
+  </ion-toolbar>
+</ion-footer>
