Update footer component and logo file

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -2,7 +2,7 @@
   <ion-toolbar>
     <ul>
       <li>
-        <ion-img class="imgIcon" src="../../../assets/Logo_Olympics_no_title.jpg"></ion-img>
+        <ion-img class="imgIcon" src="../../../assets/Logo_Olympics_no_title.png"></ion-img>
         <a href="https://olympics.com/es/paris-2024">Web Olimpiadas 2024</a>
       </li>
     </ul>
