--- a/src/app/modules/user-page/user-page.component.html
+++ b/src/app/modules/user-page/user-page.component.html
@@ -1,3 +1,7 @@
-<p>
-  user-page works!
-</p>
+<ion-grid class="grid-container">
+  <ion-row>
+    <ion-col size="12" size-md="12" size-lg="12">1</ion-col>
+    <ion-col size="12" size-md="6" size-lg="6">2</ion-col>
+    <ion-col size="12" size-md="6" size-lg="6">3</ion-col>
+  </ion-row>
+</ion-grid>
