creating components without changing routes

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-segment value="all">
+    <ion-segment [(ngModel)]="selectedSegment" (ionChange)="segmentChanged($event)">
       <ion-segment-button value="all">
         <ion-icon name="home-outline"></ion-icon>
       </ion-segment-button>
@@ -10,3 +10,6 @@
     </ion-segment>
   </ion-toolbar>
 </ion-header>
+<ion-content>
+  <ion-router-outlet></ion-router-outlet>
+</ion-content>
