--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -10,6 +10,6 @@
     </ion-segment>
   </ion-toolbar>
 </ion-header>
-<ion-content>
+<div class="container">
   <ion-router-outlet></ion-router-outlet>
-</ion-content>
+</div>
