--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -1,10 +1,12 @@
+<ion-content>
 <ng-container *ngIf="segmentService.getSelectedSegment() === 'all'; else favoritesComponent">
   <!-- Componente para la vista "all" -->
-  <div>
-    <h1>OLIMPIADAS PARÍS 2024</h1>
+  <div class="container">
+    <div class="center"><h1 class="center">OLIMPIADAS PARÍS 2024</h1></div>
   </div>
 </ng-container>
-  
+</ion-content>
+
 <ng-template #favoritesComponent>
   <!-- Componente para la vista "favorites" -->
   <p>Hola</p>
