--- a/src/app/modules/home/home.component.scss
+++ b/src/app/modules/home/home.component.scss
@@ -1,7 +1,23 @@
-div{
+@font-face {
+    font-family: 'Olympics 2024';
+    src: url('../../../assets/font/Paris2024-Variable.ttf');
+  }
+
+.container{
     position: relative;
-    display: flex;
-    margin: auto;
-    align-items: center;
+    display: inline-block;
     height: 100%;
+    width: 100%;
+    background-image: url("../../../assets/pag_principal.webp");
+    background-size: cover;
+    background-position: center;
+}
+.center{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 4vw;
+    color: white;
+    font-family: 'Olympics 2024';
 }
