--- a/src/app/modules/user-page/user-page.component.html
+++ b/src/app/modules/user-page/user-page.component.html
@@ -1,7 +1,33 @@
+<h1>Interfaz usuario</h1>
 <ion-grid class="grid-container">
   <ion-row>
-    <ion-col size="12" size-md="12" size-lg="12">1</ion-col>
-    <ion-col size="12" size-md="6" size-lg="6">2</ion-col>
-    <ion-col size="12" size-md="6" size-lg="6">3</ion-col>
+    <ion-col size="12" size-md="12" size-lg="12" class="notifications">
+      <app-notifications></app-notifications>
+    </ion-col>
+    <ion-col size="12" size-md="12" size-lg="12">
+      <div class="card">
+        <h1>Last Order</h1>
+      </div>
+    </ion-col>
+    <ion-col size="12" size-md="6" size-lg="6">
+      <div class="card">
+        <ion-card-header>
+          <ion-card-title>Detalles personales</ion-card-title>
+        </ion-card-header>
+        <ion-card-content>
+          Here's a small text description for the card content. Nothing more, nothing less.
+        </ion-card-content>
+      </div>
+    </ion-col>
+    <ion-col size="12" size-md="6" size-lg="6">
+      <div class="card">
+        <ion-card-header>
+          <ion-card-title>Subscription management for Paris 2024 communications. </ion-card-title>
+        </ion-card-header>
+        <ion-card-content>
+          To modify your subscriptions and to unsubscribed to Paris 2024 communications, please click on "Edit". 
+        </ion-card-content>
+      </div>
+    </ion-col>
   </ion-row>
 </ion-grid>
