feat: UserPage Counter

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -14,6 +14,6 @@
     </div>
   </div>
 </ion-header>
-<div class="container">
+<div id="container">
   <ion-router-outlet></ion-router-outlet>
 </div>
