--- a/src/app/modules/user-page/user-page.component.html
+++ b/src/app/modules/user-page/user-page.component.html
@@ -1,12 +1,8 @@
-<h1>Interfaz usuario</h1>
 <ion-grid class="grid-container">
   <ion-row>
-    <ion-col size="12" size-md="12" size-lg="12" class="notifications">
-      <app-notifications></app-notifications>
-    </ion-col>
     <ion-col size="12" size-md="12" size-lg="12">
-      <div class="card">
-        <h1>Last Order</h1>
+      <div class="card" id="timer-container">
+        <app-timer></app-timer>
       </div>
     </ion-col>
     <ion-col size="12" size-md="6" size-lg="6">
@@ -14,8 +10,8 @@
         <ion-card-header>
           <ion-card-title>Detalles personales</ion-card-title>
         </ion-card-header>
-        <ion-card-content>
-          Here's a small text description for the card content. Nothing more, nothing less.
+        <ion-card-content>          
+          Here's a small text description for the card content. Nothing more, nothinsdag less.
         </ion-card-content>
       </div>
     </ion-col>
