--- a/src/app/modules/user-page/user-page.component.scss
+++ b/src/app/modules/user-page/user-page.component.scss
@@ -1,39 +1,47 @@
 .grid-container {
-    position: relative;
-    margin: auto;
-    align-items: center;
     height: 100%;
     width: 100%;
-    overflow: auto;
+    margin-top: 80px;
+    margin-bottom: 100px;
+    overflow-y: auto;
 }
 
-.grid-container ion-row ion-col{
-    height: 34svh;
-    color: black;
-    text-align: center;
+.grid-container ion-row {
+    min-height: 74svh;
+    width: 100%;
 }
-.card{
+
+.grid-container ion-row ion-col {
+    color: black;
+    width: 100%;
+}
+
+.card {
+ 
+    justify-content: center;
+    text-align: center;
     border-radius: 15px;
     box-shadow: 0 4px 14px rgba(0, 0, 0, 0.15) !important;
-    width: 100%;
-    height: 100%;
+    min-height: 100%;
     padding: 16px;
 }
 
-.card ion-card-header{
+#timer-container {
+    display: flex;
+}
+
+.card ion-card-header {
     box-shadow: 0 1px 0 0 #d7c378;
 }
 
-.card ion-card-content{
+.card ion-card-content {
     margin-top: 10px;
 }
 
-.grid-container ion-row .notifications{
+.grid-container ion-row .notifications {
     text-align: start !important;
     height: fit-content;
     color: black;
     text-align: center;
     box-shadow: none !important;
 }
-
-
