Update footer and navbar styles, add portada component and timeline events

--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -6,14 +6,9 @@ body {
 }
 
 #navbar {
-    overflow: hidden;
-    background-color: #004e4c;
+    background-color: #023d3bc9;
     padding: 0.7rem 1.4rem;
-    transition: 0.4s;
-    position: fixed;
     width: 100%;
-    top: 0;
-    z-index: 99;
     display: flex;
     align-items: center;
     justify-content: space-between;
