--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -26,8 +26,7 @@ a{
     margin-left: 0.5vw;
     text-decoration: none;
 }
-.fixed-footer {
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-  }
+
+footer{
+background-color: rgb(255, 0, 21) !important;
+}
