--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,12 +2,12 @@
   <div id="navbar">
     <a href="#default" id="logo"><img src="../../../assets/logo.png" alt="logo pagina"></a>
     <div id="navbar-right">
-      <button *ngIf="auth.isAuthenticated$ | async;" (click)="logout()">
+      <button *ngIf="auth.user$ | async" (click)="logout()">
         <span class="button_top">
           Logout
         </span>
       </button>
-      <button *ngIf="(auth.isAuthenticated$ | async) === false" (click)="loginWithRedirect()">
+      <button *ngIf="(auth.user$ | async) === null" (click)="loginWithRedirect()">
         <span class="button_top">
           Login
         </span>
