quitar el footer de ionic y hacer uno con html

--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -3,6 +3,7 @@
     <!-- Componente para la vista "all" -->
     <app-portada></app-portada>
     <app-timeline></app-timeline>
+    <app-footer></app-footer>
   </ng-container>
 </ion-content>
 
