--- a/src/app/modules/home/components/timeline/timeline.component.html
+++ b/src/app/modules/home/components/timeline/timeline.component.html
@@ -1,72 +1,64 @@
 <div class="timeline">
-  <div class="timeline__event  animated fadeInUp delay-3s timeline__event--type1">
-    <div class="timeline__event__icon ">
-      <i class="lni-cake"></i>
-
-    </div>
-    <div class="timeline__event__date">
-      20-08-2019
-    </div>
-    <div class="timeline__event__content ">
-      <div class="timeline__event__title">
-        Birthday
-      </div>
-      <div class="timeline__event__description">
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel, nam! Nam eveniet ut aliquam ab asperiores, accusamus iure veniam corporis incidunt reprehenderit accusantium id aut architecto harum quidem dolorem in!</p>
-      </div>
-    </div>
-  </div>
-  <div class="timeline__event animated fadeInUp delay-2s timeline__event--type2">
+  <div
+    class="timeline__event animated fadeInUp delay-3s timeline__event--type1" data-index="0"
+  >
     <div class="timeline__event__icon">
-      <i class="lni-burger"></i>
-
+      <ion-icon name="person-add-outline"></ion-icon>
     </div>
-    <div class="timeline__event__date">
-      20-08-2019
-    </div>
+    <div class="timeline__event__date">01/03/2024</div>
     <div class="timeline__event__content">
-      <div class="timeline__event__title">
-        Lunch
-      </div>
+      <div class="timeline__event__title">Periodo de Registro de compradores</div>
       <div class="timeline__event__description">
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel, nam! Nam eveniet ut aliquam ab asperiores, accusamus iure veniam corporis incidunt reprehenderit accusantium id aut architecto harum quidem dolorem in!</p>
+        <p>
+          Durante este período, los usuarios pueden registrarse para participar en el sorteo de entradas. La interfaz pública guía a los usuarios a través del proceso de registro y proporciona información relevante sobre la etapa actual del proceso de compra.
+        </p>
       </div>
     </div>
   </div>
-  <div class="timeline__event animated fadeInUp delay-1s timeline__event--type3">
+  <div
+    class="timeline__event animated fadeInUp delay-2s timeline__event--type2" data-index="1"
+  >
     <div class="timeline__event__icon">
-      <i class="lni-slim"></i>
-
+      <ion-icon name="shuffle-outline"></ion-icon>
     </div>
-    <div class="timeline__event__date">
-      20-08-2019
-    </div>
+    <div class="timeline__event__date">30/03/2024</div>
     <div class="timeline__event__content">
-      <div class="timeline__event__title">
-        Exercise
-      </div>
+      <div class="timeline__event__title">Sorteo de Entradas</div>
       <div class="timeline__event__description">
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel, nam! Nam eveniet ut aliquam ab asperiores, accusamus iure veniam corporis incidunt reprehenderit accusantium id aut architecto harum quidem dolorem in!</p>
+        <p>
+          En este día se lleva a cabo el sorteo para asignar a los compradores registrados a uno de los 4 slots de compra. Cada slot representa una semana en la cual los compradores pueden adquirir entradas para eventos específicos.
+        </p>
       </div>
-
     </div>
   </div>
-  <div class="timeline__event animated fadeInUp timeline__event--type1">
+  <div
+    class="timeline__event animated fadeInUp delay-1s timeline__event--type3" data-index="2"
+  >
     <div class="timeline__event__icon">
-      <i class="lni-cake"></i>
-
+      <ion-icon name="cart-outline"></ion-icon>
     </div>
-    <div class="timeline__event__date">
-      20-08-2019
-    </div>
+    <div class="timeline__event__date">01/04/2024</div>
     <div class="timeline__event__content">
-      <div class="timeline__event__title">
-        Birthday
-      </div>
+      <div class="timeline__event__title">Periodo 1 de Compra entradas</div>
       <div class="timeline__event__description">
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vel, nam! Nam eveniet ut aliquam ab asperiores, accusamus iure veniam corporis incidunt reprehenderit accusantium id aut architecto harum quidem dolorem in!</p>
+        <p>
+          Durante este período, los compradores asignados por sorteo tienen la oportunidad de adquirir entradas para eventos específicos. Cada semana, se permite la compra de un máximo de 5 entradas para un máximo de 3 eventos.
+        </p>
       </div>
     </div>
   </div>
-
+  <div class="timeline__event animated fadeInUp timeline__event--type1" data-index="3">
+    <div class="timeline__event__icon">
+      <ion-icon name="cart-sharp"></ion-icon>
+    </div>
+    <div class="timeline__event__date">01/05/2024</div>
+    <div class="timeline__event__content">
+      <div class="timeline__event__title">Periodo 2 de Compra de Entradas</div>
+      <div class="timeline__event__description">
+        <p>
+          Durante este período se realizan las compras de las entradas asignadas para los eventos del segundo periodo, así como las entradas sobrantes del primer periodo. Los usuarios pueden adquirir sus entradas a través de la interfaz web o móvil proporcionada.
+        </p>
+      </div>
+    </div>
+  </div>
 </div>
