--- a/src/app/modules/home/components/timeline/timeline.component.scss
+++ b/src/app/modules/home/components/timeline/timeline.component.scss
@@ -1,9 +1,9 @@
-$content-width: calc(40vw - 84px);
-$margin: 20px;
-$spacing: 20px;
-$bdrs: 6px;
-$circle-size: 40px;
-$icon-size: 32px;
+$content-width: calc(40vw - 5.25rem);
+$margin: 1.25rem;
+$spacing: 1.25rem;
+$bdrs: 0.5rem;
+$circle-size: 2.5rem;
+$icon-size: 3rem;
 $bdrs-icon: 100%;
 
 $color1: #9251ac;
@@ -17,20 +17,16 @@ $color6: #aff1b6;
 * {
   box-sizing: border-box;
 }
-html {
-  font-size: 14px;
+
+.timeline__event {
+  opacity: 0;
+  transition: opacity 1s ease-in-out;
 }
-body {
-  background: #f6f9fc;
-  font-family: "Open Sans", sans-serif;
-  color: #525f7f;
+
+.timeline__event.visible {
+  opacity: 1;
 }
-h2 {
-  margin: 5%;
-  text-align: center;
-  font-size: 2rem;
-  font-weight: 100;
-}
+
 .timeline {
   display: flex;
   flex-direction: column;
@@ -58,7 +54,7 @@ h2 {
       .timeline__event__icon {
         &:before {
           content: "";
-          width: 2px;
+          width: 0.125rem;
           height: 100%;
           background: $color2;
           position: absolute;
@@ -72,7 +68,7 @@ h2 {
         &:after {
           content: "";
           width: 100%;
-          height: 2px;
+          height: 0.125rem;
           background: $color2;
           position: absolute;
           right: 0;
@@ -92,16 +88,17 @@ h2 {
 
       font-weight: 600;
       color: $color1;
-      letter-spacing: 1.5px;
+      letter-spacing: 0.0938rem;
     }
     &__content {
       padding: $spacing;
-      box-shadow: 0 30px 60px -12px rgba(50, 50, 93, 0.25),
-        0 18px 36px -18px rgba(0, 0, 0, 0.3),
-        0 -12px 36px -8px rgba(0, 0, 0, 0.025);
+      box-shadow: 0 1.875rem 3.75rem -0.75rem rgba(50, 50, 93, 0.25),
+        0 1.125rem 2.25rem -1.125rem rgba(0, 0, 0, 0.3),
+        0 -0.75rem 2.25rem -0.5rem rgba(0, 0, 0, 0.025);
       background: #fff;
       width: $content-width;
       border-radius: 0 $bdrs $bdrs 0;
+      color: black;
     }
     &__date {
       color: $color2;
@@ -126,10 +123,10 @@ h2 {
       background: $color2;
       border-radius: $bdrs-icon;
       width: $circle-size;
-      box-shadow: 0 30px 60px -12px rgba(50, 50, 93, 0.25),
-        0 18px 36px -18px rgba(0, 0, 0, 0.3),
-        0 -12px 36px -8px rgba(0, 0, 0, 0.025);
-      padding: 40px;
+      box-shadow: 0 1.875rem 3.75rem -0.75rem rgba(50, 50, 93, 0.25),
+        0 1.125rem 2.25rem -1.125rem rgba(0, 0, 0, 0.3),
+        0 -0.75rem 2.25rem -0.5rem rgba(0, 0, 0, 0.025);
+      padding: 2.5rem;
       height: $circle-size;
       position: relative;
 
@@ -139,7 +136,7 @@ h2 {
 
       &:before {
         content: "";
-        width: 2px;
+        width: 0.125rem;
         height: 100%;
         background: $color2;
         position: absolute;
@@ -152,7 +149,7 @@ h2 {
       &:after {
         content: "";
         width: 100%;
-        height: 2px;
+        height: 0.125rem;
         background: $color2;
         position: absolute;
         left: 0%;
@@ -195,8 +192,6 @@ h2 {
       .timeline__event__title {
         color: $color4;
       }
-      .timeline__event__title {
-      }
     }
 
     &--type3 {
@@ -228,8 +223,6 @@ h2 {
       .timeline__event__title {
         color: $color5;
       }
-      .timeline__event__title {
-      }
     }
     &:last-child {
       .timeline__event__icon {
@@ -240,6 +233,12 @@ h2 {
     }
   }
 }
+
+.timeline__event__icon ion-icon {
+  position: absolute;
+  font-size: $icon-size;
+}
+
 
 @media (max-width: 786px) {
   .timeline__event {
