--- a/src/app/components/timer/timer.component.scss
+++ b/src/app/components/timer/timer.component.scss
@@ -1,24 +1,22 @@
 #timer {
 	font-size: 3em;
 	font-weight: 100;
-	color: white;
+	color: #171717;
 	padding: 20px;
     height: 100%;
 	width: 100%;
-	color: white;
+	color: #171717;
 }
 
 #timer div {
 	display: inline-block;
 	min-width: 90px;
 	padding: 15px;
-	background: #020b43;
 	border-radius: 10px;
-	border: 2px solid #030d52;
 	margin: 15px;
 }
 #timer div span {
-	color: #ffffff;
+	color: #171717;
 	display: block;
 	margin-top: 15px;
 	font-size: .35em;
