Update logo link and navbar background color

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <ion-header>
   <div id="navbar">
-    <a href="#default" id="logo"><img src="../../../assets/logo.png" alt="logo pagina"></a>
+    <a href="/home" id="logo"><img src="../../../assets/logo.png" alt="logo pagina"></a>
     <div id="navbar-right">
       <button *ngIf="auth.user$ | async" (click)="logout()">
         <span class="button_top">
