--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -6,7 +6,7 @@ body {
 }
 
 #navbar {
-    background-color: #023d3bc9;
+  background-image: radial-gradient(circle, #051937, #004a7f, #0083a1, #00bb83b9, #2feb12b9);
     padding: 0.7rem 1.4rem;
     width: 100%;
     display: flex;
