fix: UserPage grid rows

--- a/src/app/modules/user-page/user-page.component.scss
+++ b/src/app/modules/user-page/user-page.component.scss
@@ -2,22 +2,21 @@
     height: 100%;
     width: 100%;
     margin-top: 80px;
-    margin-bottom: 100px;
     overflow-y: auto;
 }
 
 .grid-container ion-row {
-    min-height: 74svh;
+    min-height: 50%;
     width: 100%;
 }
 
-.grid-container ion-row ion-col {
+.grid-container ion-row ion-col { 
     color: black;
     width: 100%;
+    text-align: center;
 }
 
 .card {
- 
     justify-content: center;
     text-align: center;
     border-radius: 15px;
@@ -26,7 +25,7 @@
     padding: 16px;
 }
 
-#timer-container {
+#timer-container{
     display: flex;
 }
 
