--- a/src/app/components/timer/timer.component.scss
+++ b/src/app/components/timer/timer.component.scss
@@ -2,8 +2,7 @@
 	font-size: 3em;
 	font-weight: 100;
 	color: #171717;
-	padding: 20px;
-    height: 100%;
+    height: fit-content;
 	width: 100%;
 	color: #171717;
 }
