--- a/src/app/modules/user-page/user-page.component.html
+++ b/src/app/modules/user-page/user-page.component.html
@@ -5,6 +5,8 @@
         <app-timer></app-timer>
       </div>
     </ion-col>
+  </ion-row>
+  <ion-row>
     <ion-col size="12" size-md="6" size-lg="6">
       <div class="card">
         <ion-card-header>
