--- a/src/app/modules/user-page/user-page.component.html
+++ b/src/app/modules/user-page/user-page.component.html
@@ -1,9 +1,7 @@
 <ion-grid class="grid-container">
   <ion-row>
-    <ion-col size="12" size-md="12" size-lg="12">
-      <div class="card" id="timer-container">
-        <app-timer></app-timer>
-      </div>
+    <ion-col size="12" size-md="12" size-lg="12" id="timer-container">
+      <app-timer></app-timer>
     </ion-col>
   </ion-row>
   <ion-row>
@@ -13,7 +11,9 @@
           <ion-card-title>Detalles personales</ion-card-title>
         </ion-card-header>
         <ion-card-content>
-          Here's a small text description for the card content. Nothing more, nothinsdag less.
+          <ion-label>
+            Here's a small text description for the card content. Nothing more, nothinsdag less.
+          </ion-label>
         </ion-card-content>
       </div>
     </ion-col>
@@ -23,7 +23,9 @@
           <ion-card-title>Subscription management for Paris 2024 communications. </ion-card-title>
         </ion-card-header>
         <ion-card-content>
-          To modify your subscriptions and to unsubscribed to Paris 2024 communications, please click on "Edit".
+          <ion-label>
+            To modify your subscriptions and to unsubscribed to Paris 2024 communications, please click on "Edit".
+          </ion-label>
         </ion-card-content>
       </div>
     </ion-col>
