--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -4,12 +4,12 @@
     <div id="navbar-right">
       <button *ngIf="auth.user$ | async" (click)="logout()">
         <span class="button_top">
-          Logout
+          Cerrar sesión
         </span>
       </button>
       <button *ngIf="(auth.user$ | async) === null" (click)="loginWithRedirect()">
         <span class="button_top">
-          Login
+          Iniciar sesión
         </span>
       </button>
     </div>
