--- a/src/app/modules/user-page/user-page.component.html
+++ b/src/app/modules/user-page/user-page.component.html
@@ -1,10 +1,12 @@
 <ion-grid class="grid-container">
-  <ion-row>
-    <ion-col size="12" size-md="12" size-lg="12" id="timer-container">
-      <app-timer></app-timer>
+  <ion-row id="timer-row">
+    <ion-col size="12" size-md="12" size-lg="12">
+      <div id="timer-container">
+        <app-timer></app-timer>
+      </div>
     </ion-col>
   </ion-row>
-  <ion-row>
+  <ion-row id="user-row">
     <ion-col size="12" size-md="6" size-lg="6">
       <div class="card">
         <ion-card-header>
