--- a/src/app/modules/home/components/timeline/timeline.component.scss
+++ b/src/app/modules/home/components/timeline/timeline.component.scss
@@ -28,9 +28,9 @@ $color6: #aff1b6;
 }
 
 .timeline {
+  background-color: white;
   display: flex;
   flex-direction: column;
-  margin: $margin auto;
   position: relative;
 
   &__event {
