--- a/src/app/modules/home/components/footer/footer.component.scss
+++ b/src/app/modules/home/components/footer/footer.component.scss
@@ -12,7 +12,7 @@
 }
 ul{
     display: flex;
-    margin-top: 1vw;
+    margin-top: 0vw;
     margin-bottom: 0;
     padding-left: 0;
 }
@@ -25,4 +25,8 @@ li{
 a{
     margin-left: 0.5vw;
     text-decoration: none;
+}
+
+*{
+    background-color: white;
 }
