feat: UserPage Notifications

--- a/src/app/modules/user-page/user-page.component.html
+++ b/src/app/modules/user-page/user-page.component.html
@@ -1,4 +1,5 @@
 <ion-grid class="grid-container">
+  <app-notifications></app-notifications>
   <ion-row id="timer-row">
     <ion-col size="12" size-md="12" size-lg="12">
       <div id="timer-container">
