--- a/src/app/modules/user-page/components/notifications/notifications.component.html
+++ b/src/app/modules/user-page/components/notifications/notifications.component.html
@@ -1,8 +1,8 @@
-<ion-button shape="round" (click)="toggleDropdown()">
+<ion-button id="notification-button" shape="round" (click)="toggleDropdown()">
   <ion-icon name="notifications-outline"></ion-icon>
 </ion-button>
-<ion-list *ngIf="showDropdown" shape="round" class="notifications-dropdown">
-  <ion-item *ngFor="let item of dropdownItems" (click)="selectItem(item)">
+<ion-list *ngIf="showDropdown" shape="round" id="notifications-dropdown">
+  <div *ngFor="let item of dropdownItems" (click)="selectItem(item)">
     {{ item }}
-  </ion-item>
+  </div>
 </ion-list>
