--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -1,89 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
-* {box-sizing: border-box;}
-
-body { 
-  margin: 0;
+* {
+  box-sizing: border-box;
+  box-shadow: none;
 }
 
-#navbar {
-  background-image: radial-gradient(circle, #051937, #004a7f, #0083a1, #00bb83, #2feb12);
-    padding: 0.7rem 1.4rem;
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
 
-#navbar a {
-  float: left;
-  text-decoration: none;
-  font-size: 1.2rem; 
-  line-height: 1.8rem;
-  border-radius: 0.3rem;
+#navbar {
+  padding: 0.7rem 1.4rem;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 #navbar #logo {
-  transition: 0.4s;
   max-width: 7rem;
+  filter: drop-shadow(0 0 4px rgba(255, 255, 255, 0.5));
 }
-
-#navbar a.active {
-  background-color: rgb(30, 248, 255);
-  color: white;
-}
-
-#navbar-right {
-    display: flex;
-    gap: 1rem;
-  }
-
-@media screen and (max-width: 580px) {
-  #navbar {
-    padding: 1.8rem 0.7rem !important;
-  }
-  #navbar a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-  #navbar-right {
-    float: none;
-  }
-}
-
-button {
-    --button_radius: 0.75em;
-    --button_color: #e8e8e8;
-    --button_outline_color: #000000;
-    font-size: 17px;
-    font-weight: bold;
-    border: none;
-    border-radius: var(--button_radius);
-    background: var(--button_outline_color);
-  }
-  
-  .button_top {
-    display: block;
-    box-sizing: border-box;
-    border: 2px solid var(--button_outline_color);
-    border-radius: var(--button_radius);
-    padding: 0.75em 1.5em;
-    background: var(--button_color);
-    color: var(--button_outline_color);
-    transform: translateY(-0.2em);
-    transition: transform 0.1s ease;
-  }
-  
-  button:hover .button_top {
-    /* Pull the button upwards when hovered */
-    transform: translateY(-0.33em);
-  }
-  
-  button:active .button_top {
-    /* Push the button downwards when pressed */
-    transform: translateY(0);
-  }
-
 #container{
     width: 100%;
     height: 100%;
