Actualizar estilos y funcionalidades de la pantalla de user-page, faltnado agregar pantalla de contador mejorada

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<ion-header>
+<ion-header *ngIf="showNavbar">
   <div id="navbar">
     <img src="../../../assets/2024_Summer_Olympics_text_logo.svg.png" alt="logo pagina" id="logo">
   </div>
