--- a/src/app/modules/home/components/timeline/timeline.component.html
+++ b/src/app/modules/home/components/timeline/timeline.component.html
@@ -14,7 +14,7 @@
           <br><br>Comienza este proceso Registrandote desde el boton de abajo o visualiza el estado actual del proceso iniciando sesion desde el mismo boton.
         </p>
       </div>
-      <button class="button" style="--clr: #9251ac;" (click)="loginWithRedirect()">
+      <button class="button" (click)="loginWithRedirect()">
         <span class="button-decor"></span>
         <div class="button-content">
             <div class="button__icon">
