--- a/src/app/modules/home/components/timeline/timeline.component.scss
+++ b/src/app/modules/home/components/timeline/timeline.component.scss
@@ -278,6 +278,7 @@ $color7: #7f5af0;
   }
 
   .button {
+    --clr: #9251ac;
     text-decoration: none;
     line-height: 1;
     border-radius: 1.5rem;
