--- a/src/app/modules/user-page/components/notifications/notifications.component.scss
+++ b/src/app/modules/user-page/components/notifications/notifications.component.scss
@@ -1,30 +1,3 @@
-#notification-button {
-    --background: #3498db;
-    --color: white;
-    --border-radius: 30px;
-    --padding-start: 6px;
-    --padding-end: 6px;
-}
-
-#notification-button ion-icon{
-    height: 25px;
-    width: 25px;
-}
-
-#notifications-dropdown {
-    z-index: 10;
-    position: absolute;
-    background-color: rgb(255, 255, 255);
-    padding-left: 8px;
-    padding-right: 8px;
-    width: fit-content;
-    border-radius: 5px;
-    border: 1px solid rgb(200, 200, 200);
-}
-
-#notifications-dropdown div {
-    text-align: left;
-    padding: 10px;
-    margin: 2px;
-    box-shadow: 0 0.5px 0 0 #d3d3d3;
+ion-item {
+    cursor: pointer;
 }
