--- a/src/app/modules/user-page/user-page.component.scss
+++ b/src/app/modules/user-page/user-page.component.scss
@@ -1,3 +1,4 @@
+/**
 .grid-container {
     height: 100%;
     width: 100%;
@@ -59,4 +60,99 @@
     color: black;
     text-align: center;
     box-shadow: none !important;
+}
+**/
+img {
+  max-width: 150px;
+  display: block;
+  margin-top: 5%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 5%;
+  filter: drop-shadow(0 0 4px rgba(0, 0, 0, 0.5));
+}
+
+ion-toolbar {
+  box-shadow: 0 2px 4px rgba(16, 54, 222, 0.409);
+}
+
+ion-footer{
+  box-shadow: none;
+}
+
+.button {
+  text-decoration: none;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 10%;
+  --clr: rgb(16, 54, 222);
+  line-height: 1;
+  border-radius: 1.5rem;
+  overflow: hidden;
+  position: relative;
+  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.05);
+  background-color: #fff;
+  color: #121212;
+  border: none;
+  cursor: pointer;
+
+  &-decor {
+    position: absolute;
+    inset: 0;
+    background-color: var(--clr);
+    transform: translateX(-100%);
+    transition: transform 0.3s;
+    z-index: 0;
+  }
+
+  &-content {
+    display: flex;
+    align-items: center;
+    font-weight: 600;
+    position: relative;
+    overflow: hidden;
+  }
+
+  &__icon {
+    width: 48px;
+    height: 40px;
+    background-color: var(--clr);
+    display: grid;
+    place-items: center;
+  }
+
+  &__text {
+    display: inline-block;
+    transition: color 0.2s;
+    padding: 2px 1.5rem 2px;
+    padding-left: 0.75rem;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+  }
+
+  &:hover .button__text {
+    color: #fff;
+  }
+
+  &:hover .button-decor {
+    transform: translate(0);
+  }
+}
+
+.button__icon{
+font-size: 24px;
+color: white;
+}
+
+ion-col {
+  text-align: center;
+  font-size: 18px;
+  margin: 1%;
+  cursor: pointer;
+}
+
+ion-grid {
+  margin-top: 50%;
 }
