--- a/src/app/modules/user-page/components/timer/timer.component.scss
+++ b/src/app/modules/user-page/components/timer/timer.component.scss
@@ -15,7 +15,7 @@
 }
 
 #timer strong {
-  background-color: rgba(16, 54, 222);
+  background-color: rgb(255, 255, 255);
   border-radius: 10%;
   padding: 8px;
 }
